+ Auto-ban IPs after many failed login attempts
+ Check passwords against HIBP [gh-728]
~ System Configuration uses more Show On tricks to show/hide relevant settings
~ Expose the Avatars setting in System Configuration [gh-729]
~ Session data contents are now encrypted at rest
~ Session improvements
~ Expose the Behind Load Balancer configuration setting
# [HIGH] Some tasks would disable MySQL autocommit without restoring it, leading to weird issues
# [MEDIUM] MaxExec task throws fatal exception when tasks are executed over the web
# [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
# [LOW] Wrong language in mail Blade templates [gh-658]
# [LOW] Groups for disabled sites may not be displayed in the Sites admin page
# [LOW] Connection doctor: sometimes ends up with an error page instead of showing what is going on with the connection
# [LOW] High CPU usage warning when the server does not report CPU usage at all
# [LOW] Update failure email missing site name if site is already up-to-date
# [LOW] Update Director would claim a site is enqueued for updates when it's not

Akeeba Panopticon 1.1.3
================================================================================
# [HIGH] Cannot update to new Joomla! version if "only minor" update strategy is selected.

Akeeba Panopticon 1.1.2
================================================================================
~ Long PHP version is now truncated in Dashboard view
~ Better compatibility with some ancient MySQL versions
# [HIGH] Database installation errors are not communicated at installation time
# [HIGH] Panopticon database backups on Windows are empty [gh-552]
# [HIGH] Canceling causes a PHP error for some user groups [gh-583]
# [HIGH] Premature auto-start of the session
# [MEDIUM] Dashboard doesn't load if a site doesn't report its CMS version
# [MEDIUM] The SSL/TLS expiration task would fail on MariaDB [gh-562]