@@ -1,5 +1,5 @@
 <component name="ProjectRunConfigurationManager">
-  <configuration default="false" name="CLI task:joomlaupdate:director" type="PhpLocalRunConfigurationType" factoryName="PHP Console" path="$PROJECT_DIR$/cli/panopticon.php" scriptParameters="task:joomlaupdate:director --force -vvv">
+  <configuration default="false" name="CLI task:joomlaupdate:director" type="PhpLocalRunConfigurationType" factoryName="PHP Console" path="$PROJECT_DIR$/cli/panopticon.php" scriptParameters="task:joomlaupdate:director --force --force_queue -vvv">
     <method v="2" />
   </configuration>
 </component>
