@@ -1,0 +1,17 @@
+<?php
+/**
+ * @package   panopticon
+ * @copyright Copyright (c)2023-2024 Nicholas K. Dionysopoulos / Akeeba Ltd
+ * @license   https://www.gnu.org/licenses/agpl-3.0.txt GNU Affero General Public License, version 3 or later
+ */
+
+namespace Akeeba\Panopticon\Exception\CoreUpdate;
+
+use RuntimeException;
+
+defined('AKEEBA') || die;
+
+class NonEmailedRuntimeException extends RuntimeException
+{
+
+}
